# github-getsummary

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cli.py  from __future__ import annotations.py  generate_html_report.py  generate_readme.py  generate_report.py  pyproject.toml  requirements.txt  test_analyzer.py  test_consistency.py  test_plot.py  test_run.py
.github/workflows/: ci.yml
core/: github_client.py  repository_analyzer.py  use_cases.py
core/metrics/: __init__.py  consistency.py  timeline.py
docs/: agent-brief.md
examples/: example_consistency.py  example_plot.py  example_timeline.py
examples/reports/: report_example.json  report_example.md
reports/: consistency_report.html  consistency_report.md
tests/: test_caching.py  test_cli.py  test_github_client.py
visualization/: consistency_plot.py  timeline_plot.py
